# common_core

./: Makefile  README.md  cookiecutter.json  main.py  pyproject.toml
common_core/: base_agent.py  config.py  utils.py
common_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common_core/config/: settings_loader.py
common_core/tests/: test_core.py
core/: logger.py  utils.py
tests/: test_core.py
{{cookiecutter.project_slug}}/: main.py  settings.yaml
